apps/qbittorrent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/component: qbittorrent
