apps/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-httproute
  namespace: qbittorrent
spec:
  parentRefs:
  - name: mdch-lab-gateway
  hostnames:
  - "qbittorrent.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
  - backendRefs:
    - name: qbittorrent
      port: 80
